refactor: migrate String.format to String.formatted (Java 15+)
Motivation:
Java 15 introduced String.formatted() as an instance method counterpart
to String.format(), providing cleaner and more readable string formatting.

Modification:
Replace String.format("literal", args) with "literal".formatted(args)
in Kafka testkit container classes.

Result:
More concise and idiomatic Java code leveraging Java 15+ API.